# continuum

./: .gitignore  CHANGELOG.md  Continuum.bat  README.md  WINDOWS.md  package.json
.github/workflows/: windows-capture.yml  windows-installer.yml
daemon/: app-window.mjs  apps.mjs  apps.test.mjs  config.mjs  daemon-control.mjs  daemon-control.test.mjs  dashboard.mjs  detect.mjs  detect.test.mjs  mcp-server.mjs  notify.mjs  notify.test.mjs  pipeline.mjs  pipeline.test.mjs  store.mjs  store.test.mjs
daemon/eval/: eval.mjs  eval.test.mjs  fixtures.mjs
daemon/stage1/: audio.swift  screen.swift  vision.mjs  vision.test.mjs
daemon/stage1/audio-capture/: README.md  continuum_calls.py  continuum_caploop.cpp  continuum_listen.py
daemon/stage1/win-capture/: Cargo.toml  README.md  log.txt  sample-stream.jsonl
daemon/stage1/win-capture/src/: capture.rs  main.rs  ocr.rs  redact.rs  uia.rs
daemon/stage2/: cap.test.mjs  fusion.test.mjs  novelty.mjs  novelty.test.mjs  segmenter.mjs  segmenter.test.mjs
daemon/stage4/: digest.mjs  digest.test.mjs  distill.mjs  distill.test.mjs  extract.mjs  extract.test.mjs  label.test.mjs  reminders.mjs  reminders.test.mjs  tasks.mjs  tasks.test.mjs  voice.mjs  voice.test.mjs
docs/architecture/: ingestion-pipeline.md
docs/design/: dashboard.md
docs/design/variants/: atlas.html  beacon.html  daylight.html  lens.html  minimal.html
packaging/windows/: README.md  continuum.iss  launch.vbs  make-icon.mjs
